--- a/projeto loja/index.html
+++ b/projeto loja/index.html
@@ -73,44 +73,52 @@
         </div>
     </aside>
 
-    <div class="modeLoWindowArea">
+    <div class="modeloWindowArea">
         <div class="modeloWindowBody">
-            <div class="modeloInfo-cancelMobileButton">Voltar</div>
-            <div class="modeloBig">
-                <img src="">
+          <div class="modeloInfo-cancelMobileButton">Voltar</div>
+          <div class="modeloBig">
+            <img src="" />
+          </div>
+          <div class="modeloInfo">
+            <h1>--</h1>
+            <div class="modeloInfo-desc">--</div>
+  
+            <div class="modeloInfo-sizearea">
+              <div class="modeloInfo--sector">Tamanho</div>
+  
+              <div class="modeloInfo-sizes">
+                <div data-key="0" class="modeloInfo-size selected">
+                  PEQUENO <span>--</span>
+                </div>
+  
+                <div data-key="1" class="modeloInfo-size">
+                  MEDIO <span>--</span>
+                </div>
+  
+                <div data-key="2" class="modeloInfo-size">
+                  GRANDE <span>--</span>
+                </div>
+              </div>
             </div>
-            <div class="modeloInfo">
-                <h1>--</h1>
-                <div class="modeloInfo-desc">--</div>
-                <div class="modeloInfo-sizes">
-                    <div data-key="0" class="modeloInfo-sizes">
-                        PEQUENO <span>--</span>
-                    </div>
-                <div data-key="1" class="modeloInfo-sizes">
-                    MEDIO <span>--</span>
+  
+            <div class="modeloInfo-pricearea">
+              <div class="modeloInfo-sector">Preço</div>
+              <div class="modeloInfo-price">
+                <div class="modeloInfo-actualPrice">R$ --</div>
+                <div class="modeloInfo-qtarea">
+                  <button class="modeloInfo-qtmenos">-</button>
+                  <div class="modeloInfo-qt">1</div>
+                  <button class="modeloInfo-qtmais">+</button>
                 </div>
-                <div data-key="2" class="modeloInfo-sizes">
-                    GRANDE <span>--</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="modeloInfo-pricearea">
-            <div class="modeloInfo-sector">Preço</div>
-                <div class="modeloInfo-price">
-                    <div class="modeloInfo-actualPrice">R$ --</div>
-                    <div class="modeloInfo-qtarea">
-                        <button class="modeloInfo-qtmenos">-</button>
-                        <div class="modeloInfoqt">1</div>
-                        <button class="modeloInfo-qtmais">+</button>
-                    </div>
-                </div>
+              </div>
             </div>
             <div class="modeloInfo-addButton">Adicionar ao carrinho</div>
             <div class="modeloInfo-cancelButton">Cancelar</div>
-        </div>    
-    </div>
-<script src="js/modelo.js"></script>
-<script src="js/script.js"></script>
+          </div>
+        </div>
+      </div>
+    
+      <script src="js/modelo.js"></script>
+      <script src="js/script.js"></script>
 </body>
 </html>
